# jai

./: 404.html  CNAME  INSTALL  Makefile  Makefile.am  NEWS  README.md  arch-vm.html  argtype.h  comparison.html  complete.cc  configuration.html  configure.ac  contributing.html  cred.cc  cred.h  default_conf.cc  defer.h  err.h  faq.html  fs.cc  fs.h  hashmap.json  index.html  install.html  jai.1.html  jai.1.md  jai.cc  jai.h  modes.html  options.cc  options.h  quick-start.html  recipes.html  security.html
.github/workflows/: build.yml
assets/: app.BrpueRPc.js  arch-vm.md.C6MKwmxR.js  arch-vm.md.C6MKwmxR.lean.js  comparison.md.D2zLo0gn.js  comparison.md.D2zLo0gn.lean.js  configuration.md.CNivb8Nd.js  configuration.md.CNivb8Nd.lean.js  configuration.md.bI6oJyyd.js  configuration.md.bI6oJyyd.lean.js  contributing.md.D4m3iJVb.js  contributing.md.D4m3iJVb.lean.js  faq.md.C-2zPZwo.js  faq.md.C-2zPZwo.lean.js  faq.md.Calm1KdA.js  faq.md.Calm1KdA.lean.js  faq.md.FyXlc4_1.js  faq.md.FyXlc4_1.lean.js  index.md.BbubW9KS.js  index.md.BbubW9KS.lean.js  index.md.RLLI2Iuz.js  index.md.RLLI2Iuz.lean.js  install.md.C6gbkqf0.js  install.md.C6gbkqf0.lean.js  install.md.CvtbsZdN.js  install.md.CvtbsZdN.lean.js  install.md.DqY6B3-r.js  install.md.DqY6B3-r.lean.js  jai.1.md.CQHuj5_m.js  jai.1.md.CQHuj5_m.lean.js  jai.1.md.j8RJZ1tO.js  jai.1.md.sOUtgBcW.js  jai.1.md.sOUtgBcW.lean.js  modes.md.DXrzCtUB.js  modes.md.DXrzCtUB.lean.js  quick-start.md.B-2snAY4.js  quick-start.md.B-2snAY4.lean.js  quick-start.md.BcmRbld8.js  quick-start.md.BcmRbld8.lean.js  recipes.md.C2Q1mid9.js  recipes.md.C2Q1mid9.lean.js  (+6 more)
assets/chunks/: framework.D7zHIyZF.js  theme.Dvjj_dE6.js
src/: jai.cc  jai.h  seccomp.cc  seccomp.h
tests/: basic.sh  config-precedence.sh
